# microclaw

./: .gitignore  BLOG.md  Cargo.toml  DEVELOP.md  FIRECRACKER.md  README.md  README_CN.md  RELOAD.md  TEST.md  microclaw.config.example.yaml  microclaw.service
.github/workflows/: release-assets.yml
firecracker-saas/: .gitignore  Makefile  README.md
firecracker-saas/config/: nginx-saas.conf  tiers.yaml  vm-config.json
firecracker-saas/control-plane/: Cargo.toml
firecracker-saas/control-plane/src/: api.rs  db.rs  firecracker.rs  main.rs  network.rs  proxy.rs  snapshot.rs  tenant.rs
firecracker-saas/guest/: health-agent.sh  init.sh  microclaw.service
firecracker-saas/scripts/: build-rootfs.sh  build-static.sh  create-golden-snapshot.sh  create-tap.sh  deploy.sh  test-proxy.sh
firecracker-saas/systemd/: microclaw-control.service  microclaw-nginx.service
scripts/: hot-reload.sh  release_finalize.sh  release_homebrew.sh
src/: agent_engine.rs  codex_auth.rs  config.rs  db.rs  doctor.rs  embedding.rs  lib.rs  llm.rs  main.rs  runtime.rs  scheduler.rs  setup.rs  usage.rs  web.rs
src/channels/: discord.rs  feishu.rs  telegram.rs
src/tools/: bash.rs  edit_file.rs  export_chat.rs  glob.rs  grep.rs  mod.rs  read_file.rs  schedule.rs  send_message.rs  sub_agent.rs  write_file.rs
tests/: config_validation.rs
web/src/: main.tsx  styles.css
web/src/components/: session-sidebar.tsx
